fix scroll problem on iphone 6s chrome

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a {
 .container-cover {
   /* overflow: hidden; */
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   position: relative;
   background-color: lightblue;
 }
@@ -132,4 +132,9 @@ a {
   -webkit-box-direction: reverse;
   -ms-flex-direction: row-reverse;
   flex-direction: row-reverse;
+}
+
+/* ----------------- */
+p {
+  padding: 1000px 20px;
 }
